argocd-apps/apps/loki_stack_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - loki.sikademo3.uk
      secretName: loki.sikademo3.uk-tls
  rules:
    - host: loki.sikademo3.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
